Fix up formatting of trip options a bit, so that doesn't squash down as far.

--- a/app/assets/stylesheets/base/_base.css.scss
+++ b/app/assets/stylesheets/base/_base.css.scss
@@ -413,3 +413,5 @@ td.left, th.left {
 .top-margin{
   margin-top: 20px;
 }
+
+.trips.show .first-in-row { margin-left: 0 !important; }
